nextportfolio/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --backgroundLight: rgb(255, 255, 255);
  --backgroundDark: #222831;
  --textcolorLight: rgb(0, 0, 0);
  --textcolorDark: rgb(255, 255, 255);
  --headercolorLight: rgb(51, 59, 165);
  --headercolorDark: #EEEEEE;
  --buttonColorLight: rgb(23, 68, 182);
  --buttonColorDark: rgb(235, 204, 126);
  --iconcolorDark: #b7d0e1
}

@media (prefers-color-scheme: dark) {
  :root {
    --backgroundDark: #222c31;
  }
}

html {
  scroll-behavior: smooth;
  scroll-snap-type: y mandatory;
  color-scheme: dark light;
  font-family: system-ui, sans-serif;
}

body {
  position: relative;
}

section {
  min-height: 100vh;
  min-height: 100svh;
  /* scroll-snap-align: start;
  scroll-snap-stop: always; */
}

.mainGrid {
  
  position: relative;
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-areas: "landing landing landing"
                       "navHead navHead navHead"
                       "aboutMe aboutMe aboutMe"
                       "project project project"
                       "techSec techSec techSec"
                       "footers footers footers";
}

.landingSection {
  grid-area: landing;  
}

.parallax {
  position: relative;
  height: 45vh;
  height: 45svh;
  display: flex;
  justify-content: center;
}

.parallax > * {
  position: absolute;
  height: 45vh;
  height: 45svh;
  object-fit: cover;
}

.backgroundLayer {
  object-fit: cover;
  position: fixed;
  width: 100vw;
}

.bodyLayer {
  position: fixed;
  max-width: 540px;
}

.handsbg {
  z-index: 2;
}

.handsLayers{
  position: absolute;
  height: 45vh;
  height: 45svh;
  display: flex;
  width: 100%;
  justify-content: space-between;
  z-index: 2;
}

.hand {
  height: 45vh;
  height: 45svh;
  width: fit-content;
}

.headerLayer {
  position: relative;
  height: 55vh;
  height: 55svh;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.headerH1 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

.headerIntro {
  font-size: 1.1rem;
  margin-right: auto;
  font-weight: 600;
}

.headerName {
  font-weight: 900;
  font-size: 2rem;
  line-height: .8;
}

.main__action {
  display: flex;
  justify-content: center;
  align-items: start;
  height: 10vh;
}

.main__scroll {
  height: 10vh;
  
}

.main__scroll-box {
  height: 4em;
}

.main__scroll-box svg {
  
}

.main__scroll-text {  
  font-size: 1rem;
}

.main__action .main__scroll-box {
  animation: scroll-down 3s infinite;
}

/* Animate scroll icon */
@keyframes scroll-down {
  0%, 100% {
    transform: translateY(0rem);
    opacity: 1;
  }

  35% {
    transform: translateY(1rem);
    opacity: 0;
  }

  70% {
    transform: translateY(-1rem);
    opacity: 0;
  }
}

.aboutSection {
  grid-area: aboutMe;
  display: flex;
  justify-content: center;
  align-content: center;
  z-index: 1;
  padding: 1rem;
}

.aboutLayout {
  font-size: 1.125rem;
  line-height: 1.75rem;
  padding-top: 3rem;
  display: grid;
  gap: 1em;
  grid-template-columns: repeat(2, 1fr);
  grid-template-areas: "gridH1   gridH1"
                       "grid4    grid4"
                       "grid1    grid1"
                       "grid2    grid2"
                       "grid3    grid3"
}

.aboutLayout p {
  max-width: 60ch;
}

.aboutH1 {
  font-size: 2rem;
  font-weight: 900;
  grid-area: gridH1;
  text-align: center;
}

.aboutH1-animation {
  animation: slideRight 3s both;
}

.about1 {
  grid-area: grid1;
}

.about1-animation {
  animation: slideRight 3s both;
}

.about2 {
  grid-area: grid2;
}

.about2-animation {
  animation: slideRight 3.5s both;
}

.about3 {
  grid-area: grid3;
}

.about3-animation {
  animation: slideRight 4s both;
}

.aboutH2 {
  font-size: 1.5rem;
  font-weight: 700;
  padding-top: 1em;
  padding-bottom: .4em;
}

.aboutImg {
  grid-area: grid4;
  height: 50vh;
  width: auto;
  object-fit: contain;
  justify-self: center;
  align-self: end;
}

.about-animation {
  animation: textReveal 1.1s both;
}

.projectH1 {
  font-size: 2em;
  font-weight: 600;
}

.projectSection {
  grid-area: project;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
  padding: 3em;  
}

.goalsul li::marker {
  content: "✔️";
}

.oppul li::marker {
  content: "⚠️";
}

.oppSVG {
  width: 45px;
  height: 45px;
}

.goalsSVG {
  width: 35px;
  padding-right: .75em;
}

/* TECH STACK START */
.techSection {
  grid-area: techSec;  
  display: flex;
  justify-content: center;
  align-items:center;
  z-index: 1;
  box-shadow: 0 4px 4px -2px black;
}

.techObserve {
  display: flex;
  flex-direction: column;
  justify-items: center;
  align-items: center;
}

#techHead {
  grid-area: techHead;
}

.techGrid {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-areas: '.... ........ .........  ...  ....'
                       '.... ........ .........  ...  ....'
                       '.... ........ react      ...  ....'
                       '.... tailwind next       sql  pyth'
                       'html css      javascript php  java';  
  justify-items: center;
  align-items: center;
  max-width: 304px;
  max-height: 304px;
  margin: auto; 
  gap: 2px; 
  padding-top: 3rem
}

.skillCard {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 60px;
  min-width: 60px;
  box-shadow: 0px 10px 8px gray;
  border: 2px solid lightgray;
  background-color: white;
  color: black;
  border-radius: 7px;
} 

.cardWrapper {
  animation: offHover .3s both;
}

.cardWrapper:hover {
  animation: onHover .3s forwards;
  z-index: 99;
} 

.cardWrapper:active {
  animation: offHover .3s both; 
} 

.skillLogo {
  margin: auto;
  font-size: 2em;
}

.skillName {
  margin-top: auto;
  font-size: 0.7em;
  color: black;
}

#html {
  grid-area: html;
}

#css {
  grid-area: css;
}

#javascript {
  grid-area: javascript;
}

#php {
  grid-area: php;
}
/* ... */

